update : BoardController / registForm.jsp
- log 출력문 삭제
- 게시물 등록 시 값이 비어있는지 확인하는 로직 변경
- 세션 비워주기